# caaa

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  backup_game copy.json  caaa  cmake_install.cmake  compile_commands.json  cppcheck.txt  game_data copy.json  game_data.json  game_data_2.json
.devcontainer/: Dockerfile  devcontainer.json
data/: connections.json  inactive_units.json  territories.json  unittypes.json
include/: aa_gun.h  active_stack.h  active_unit_stack.h  air.h  array_functions.hpp  artillery.h  battleship.h  bomber.h  canal.h  canal.hpp  cargo.h  carrier.h  channel_data.h  config.h  connection.h  cruiser.h  destroyer.h  engine.h  engine.hpp  fighter.h  game_cache.hpp  game_data.h  game_data_sizes.h  game_state.h  game_state.hpp  game_state_MCTS.hpp  game_state_json.hpp  game_state_memory.hpp  inactive_unit_stack.h  infantry.h  json_data_loader.h  json_state.hpp  land.h  land.hpp  land_data.h  map_cache.hpp  mcts.h  mcts.hpp  mobile_unit.h  player.h  (+22 more)
include/units/: aa_gun.h  aa_gun.hpp  artillery.h  artillery.hpp  battleship.h  battleship.hpp  bomber.h  bomber.hpp  carrier.h  carrier.hpp  cruiser.h  cruiser.hpp  destroyer.h  destroyer.hpp  fighter.h  fighter.hpp  infantry.h  infantry.hpp  sub.h  sub.hpp  tank.h  tank.hpp  transport.h  transport.hpp  units.h  units.hpp
src/: active_stack.c  active_unit_stack.c  air.c  canal.c  canal.cpp  cargo.c  connection.c  engine.c  engine.cpp  game_cache.cpp  game_data.c  game_state.cpp  game_state_memory.cpp  inactive_unit_stack.c  json_data_loader.c  json_state.cpp  land.c  land.cpp  main.c  main.cpp  map_cache.cpp  mcts.c  mcts.cpp  mobile_unit.c  player.c  player.cpp  rand.c  random_numbers.cpp  sea.c  sea.cpp  serialize_data.c  serialize_data.cpp  team.c  territory.c  unit_health.c  unit_status.c  unit_type.c  units.c  units.cpp  unittype.c
